# ilias

./: README.md  setup.cfg
conf/: config.yaml
conf/net/: _template.yaml  niall2.yaml
ili_at_scale/: architectures.py  hyperparameters.py  optuna.py  preprocess.py  train.py  validate.py
ilias/: loaders.py  optuna.py  preprocess.py  priors.py  tools.py  train.py  validate.py
jobs/: slurm_infoptuna.sh  slurm_infpre.sh  slurm_infretrain.sh  slurm_infvalid.sh
jobs/matt/: README.md  optuna.sh  preprocess.sh  priors_matt.py  retrain.sh  validate.sh
