[metadata]
name = ili-at-scale
version = 0.1.0
description = Scalable SBI training, hyperparameter optimization, and validation on HPC systems

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    torch
    matplotlib
    hydra-core
    omegaconf
    optuna
    scikit-learn
    joblib
    pyyaml
    tqdm
    h5py
